completed issue #9 - menu alignment

--- a/app/styles/navigation/_navigation.scss
+++ b/app/styles/navigation/_navigation.scss
@@ -55,7 +55,7 @@
 			display: inline-block;
 			position: static;
 			width: auto;
-			padding: 10px;
+			padding: 20px;
 		
 			&__element {
 				display: inline-block;
